Minor edits to Forecasts are deliberately wrong

--- a/public/404.html
+++ b/public/404.html
@@ -143,8 +143,8 @@ ga('send', 'pageview');
                   Feb 2, 2019
                 </span>
               </span>
-              <div class="media-content hide-xs font-merryweather">“Forecasts are deliberately wrong”.
-Whoa! This confronting remark shot back at me when telling a data science colleague that I am an experienced Demand Manager. A part of my shock came from realising that I could see where he was coming from despite always striving towards achieving a “50/50” forecast; i.e. a forecast with a 50% chance of sitting too high balanced by a 50% chance of sitting too low.</div>
+              <div class="media-content hide-xs font-merryweather">“Forecasts are deliberately wrong”
+Whoa! This confronting remark shot back at me when telling a data science colleague that I am an experienced Demand Manager. A part of my shock came from knowing deep down that I could see where he was coming from despite always striving towards achieving a “50/50” forecast; i.e. a forecast with a 50% chance of sitting too high balanced by a 50% chance of sitting too low.</div>
             </div>
             <div style="clear:both;"></div>
             <hr>
